--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry - Snake</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="body">
+        <div id="scoreBox">Score: 0</div>
+        <div id="hiscoreBox">HiScore: 0</div>
         <div id="board"></div>
     </div>
-    <script src="/index.js"></script>
 </body>
+<script src="js/index.js"></script>
 </html>
